--- a/templates/home.html
+++ b/templates/home.html
@@ -29,18 +29,18 @@
     <h2>Update: </h2>
     <form action = "{{url_for('update')}}" method = "POST">
       <select name = "updateRow">
-        <option updateTable = "insurance">Health Insurance</option>
-        <option updateTable = "benefit">Benefit Type</option>
-        <option updateTable = "status">Project Status</option>
-        <option updateTable = "address">Address</option>
-        <option updateTable = "position">Job Position</option>
-        <option updateTable = "department">Department</option>
-        <option updateTable = "employee">Employee</option>
-        <option updateTable = "empBenefit">Employee's Benefit</option>
-        <option updateTable = "project">Project</option>
-        <option updateTable = "role">Role</option>
-        <option updateTable = "empProject">Employee's Project</option>
-        <option updateTable = "empDep">Employee's Department</option>
+        <option value = "insurance">Health Insurance</option>
+        <option value = "benefit">Benefit Type</option>
+        <option value = "status">Project Status</option>
+        <option value = "address">Address</option>
+        <option value = "position">Job Position</option>
+        <option value = "department">Department</option>
+        <option value = "employee">Employee</option>
+        <option value = "empBenefit">Employee's Benefit</option>
+        <option value = "project">Project</option>
+        <option value = "role">Role</option>
+        <option value = "empProject">Employee's Project</option>
+        <option value = "empDep">Employee's Department</option>
       </select>
       <input type = "submit" value = "Go">
     </form>
@@ -49,18 +49,18 @@
   <h2>Delete: </h2>
   <form action = "{{url_for('delete')}}" method = "POST">
     <select name = "deleteRow">
-      <option deletingTable = "insurance">Health Insurance</option>
-      <option deletingTable = "benefit">Benefit Type</option>
-      <option deletingTable = "status">Project Status</option>
-      <option deletingTable = "address">Address</option>
-      <option deletingTable = "position">Job Position</option>
-      <option deletingTable = "department">Department</option>
-      <option deletingTable = "employee">Employee</option>
-      <option deletingTable = "empBenefit">Employee's Benefit</option>
-      <option deletingTable = "project">Project</option>
-      <option deletingTable = "role">Role</option>
-      <option deletingTable = "empProject">Employee's Project</option>
-      <option deletingTable = "empDep">Employee's Department</option>
+      <option value = "insurance">Health Insurance</option>
+      <option value = "benefit">Benefit Type</option>
+      <option value = "status">Project Status</option>
+      <option value = "address">Address</option>
+      <option value = "position">Job Position</option>
+      <option value = "department">Department</option>
+      <option value = "employee">Employee</option>
+      <option value = "empBenefit">Employee's Benefit</option>
+      <option value = "project">Project</option>
+      <option value = "role">Role</option>
+      <option value = "empProject">Employee's Project</option>
+      <option value = "empDep">Employee's Department</option>
     </select>
     <input type = "submit" value = "Go">
   </form>
