Editing query.html

--- a/templates/query.html
+++ b/templates/query.html
@@ -26,5 +26,8 @@
   {%if query%}
     Show {{query}}
   {%endif%}
+  <br>
+  <h2><a href="{{url_for("home")}}">Home</a href></h2>
+  </br>
 </body>
 </html>
