fixing query.html

--- a/templates/query.html
+++ b/templates/query.html
@@ -29,7 +29,9 @@
     <tr>
       {% for r in row %}
       <td> {{ r }} </td>
+      {%endfor%}
     </tr>
+    {%endfor%}
   </table>
   {%endif%}
   <br>
