--- a/templates/updateAddresses.html
+++ b/templates/updateAddresses.html
@@ -12,15 +12,15 @@
      <h2>Update Address: </h2>
      <h2>Set</h2>
          <select name = "attribute">
-          <option attribute = "address">Address</option>
-          <option attribute = "zipCode">Zip code</option>
+          <option value = "address">Address</option>
+          <option value = "zipCode">Zip code</option>
          </select>
      <h2>As:</h2>
          <input type="text" name="input">
      <h2>For</h2>
          <select name = "position">
-          <option attribute = "address">Address</option>
-          <option attribute = "zipCode">Zip code</option>
+          <option value = "address">Address</option>
+          <option value = "zipCode">Zip code</option>
          </select>
      <h2>Equaling:</h2>
         <input type="text" name="input2">
