fixing updateHealthInsurance.html

--- a/templates/updateHealthInsurance.html
+++ b/templates/updateHealthInsurance.html
@@ -12,13 +12,13 @@
     <h2>Update Health Insurance: </h2>
      <h2>Set</h2>
          <select name = "i2">
-             <option attribute = "coverage">Coverage</option>
+             <option value = "coverage">Coverage</option>
          </select>
      <h2>As:</h2>
          <input type="text" name="i3">
      <h2>For</h2>
          <select name = "i4">
-              <option attribute = "coverage">Coverage</option>
+              <option value = "coverage">Coverage</option>
          </select>
      <h2>Equaling:</h2>
         <input type="text" name="i5">
