--- a/templates/addPositions.html
+++ b/templates/addPositions.html
@@ -11,9 +11,9 @@
 <form action="{{ url_for('insertIntoPositions') }}" method="post">
    <p>Please enter the new Position:</p>
    <input type="text" name="i1"/> <br>
-   <p>Please enter the new minimum salary:</p>
+   Please enter the new minimum salary: <br>
    <input type="text" name="i2"/> <br>
-   <p>Please enter the new maximum salary:</p>
+   Please enter the new maximum salary: <br>
    <input type="text" name="i3"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
