--- a/templates/addAddresses.html
+++ b/templates/addAddresses.html
@@ -10,8 +10,8 @@
 <h2>Add: </h2>
 <form action="{{ url_for('insertIntoAddresses') }}" method="post">
    <p>Please enter the new Address:</p>
-   <input type="text" name="i1"/> <br>
-   <p>Please enter the new ZIP code:</p>
+   <input type="text" name="i1" size="60"/> <br>
+   Please enter the new ZIP code:<br>
    <input type="text" name="i2"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
