--- a/templates/addEmployeeAssignments.html
+++ b/templates/addEmployeeAssignments.html
@@ -11,11 +11,11 @@
 <form action="{{ url_for('insertIntoEmployeeAssignments') }}" method="post">
    <p>Please enter the new EmployeeID:</p>
    <input type="text" name="emp"/> <br>
-   <p>Please enter the new Department:</p>
+   Please enter the new Department:<br>
    <input type="text" name="dep"/> <br>
-   <p>Please enter the new Start Date as yyyy-mm-dd:</p>
+   Please enter the new Start Date as yyyy-mm-dd:<br>
    <input type="text" name="start"/> <br>
-   <p>Please enter the new End Date as yyyy-mm-dd:</p>
+   Please enter the new End Date as yyyy-mm-dd:<br>
    <input type="text" name="end"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
