--- a/templates/addEmployeeBenefits.html
+++ b/templates/addEmployeeBenefits.html
@@ -11,11 +11,11 @@
 <form action="{{ url_for('insertIntoEmployeeBenefits') }}" method="post">
    <p>Please enter the new EmployeeID:</p>
    <input type="text" name="employee"/> <br>
-   <p>Please enter the new Benefit:</p>
+   Please enter the new Benefit:<br>
    <input type="text" name="benefit"/> <br>
-   <p>Please enter the new Start Date as yyyy-mm-dd:</p>
+   Please enter the new Start Date as yyyy-mm-dd:<br>
    <input type="text" name="start"/> <br>
-   <p>Please enter the new End Date as yyyy-mm-dd:</p>
+   Please enter the new End Date as yyyy-mm-dd:<br>
    <input type="text" name="end"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
