--- a/templates/addEmployeeInfo.html
+++ b/templates/addEmployeeInfo.html
@@ -11,31 +11,31 @@
 <form action="{{ url_for('insertIntoEmployeeInfo') }}" method="post">
    <p>Please enter the new EmployeeID:</p>
    <input type="text" name="id"/> <br>
-   <p>Please enter the new SSN:</p>
+   Please enter the new SSN:<br>
    <input type="text" name="ssn"/> <br>
-   <p>Please enter the new Name:</p>
+   Please enter the new Name:<br>
    <input type="text" name="name"/> <br>
-   <p>Please enter the new Gender:</p>
+   Please enter the new Gender:<br>
    <input type="text" name="gender"/> <br>
-   <p>Please enter the new Date of Birth as yyyy-mm-dd:</p>
+   Please enter the new Date of Birth as yyyy-mm-dd:<br>
    <input type="text" name="birth"/> <br>
-   <p>Please enter the new Primary Address:</p>
-   <input type="text" name="address"/> <br>
-   <p>Please enter the new Phone Number:</p>
+   Please enter the new Primary Address:<br>
+   <input type="text" name="address" size="60"/> <br>
+   Please enter the new Phone Number:<br>
    <input type="text" name="phone"/> <br>
-   <p>Please enter the new Highest Degree:</p>
+   Please enter the new Highest Degree:<br>
    <input type="text" name="degree"/> <br>
-   <p>Please enter the new Years of Experience:</p>
+   Please enter the new Years of Experience:<br>
    <input type="text" name="experience"/> <br>
-   <p>Please enter the new Hiring Position:</p>
-   <input type="text" name="hPosition"/> <br>
-   <p>Please enter the new Hiring Salary:</p>
+   Please enter the new Hiring Position:<br>
+   <input type="text" name="hPosition" size="30"/> <br>
+   Please enter the new Hiring Salary:<br>
    <input type="text" name="hSalary"/> <br>
-   <p>Please enter the new Current Position:</p>
-   <input type="text" name="position"/> <br>
-   <p>Please enter the new Current Salary:</p>
+   Please enter the new Current Position:<br>
+   <input type="text" name="position" size="30"/> <br>
+   Please enter the new Current Salary:<br>
    <input type="text" name="salary"/> <br>
-   <p>Please enter the new Health Insurance Coverage:</p>
+   Please enter the new Health Insurance Coverage:<br>
    <input type="text" name="insurance"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
