--- a/templates/addPositions.html
+++ b/templates/addPositions.html
@@ -10,7 +10,7 @@
 <h2>Add: </h2>
 <form action="{{ url_for('insertIntoPositions') }}" method="post">
    <p>Please enter the new Position:</p>
-   <input type="text" name="i1"/> <br>
+   <input type="text" name="i1" size="30"/> <br>
    Please enter the new minimum salary: <br>
    <input type="text" name="i2"/> <br>
    Please enter the new maximum salary: <br>
