--- a/templates/addEmployeeProjects.html
+++ b/templates/addEmployeeProjects.html
@@ -11,13 +11,13 @@
 <form action="{{ url_for('insertIntoEmployeeProjects') }}" method="post">
    <p>Please enter the new EmployeeID:</p>
    <input type="text" name="employee"/> <br>
-   <p>Please enter the new Project:</p>
+   Please enter the new Project:<br>
    <input type="text" name="project"/> <br>
-   <p>Please enter the new Role:</p>
+   Please enter the new Role:<br>
    <input type="text" name="role"/> <br>
-   <p>Please enter the new Start Date as yyyy-mm-dd:</p>
+   Please enter the new Start Date as yyyy-mm-dd:<br>
    <input type="text" name="start"/> <br>
-   <p>Please enter the new End Date as yyyy-mm-dd:</p>
+   Please enter the new End Date as yyyy-mm-dd:<br>
    <input type="text" name="end"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
