update benefits done

--- a/templates/updateBenefits.html
+++ b/templates/updateBenefits.html
@@ -9,24 +9,16 @@
 <body>
   <div>
  <form action = "{{ url_for('update') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "Benefits">Benefits</option>
-         </select>
-     <h2>Add the attribute to be updated upon</h2>
-         <select name = "i2">
-             <option attribute = "benefit">Benefit</option>
-         </select>
-     <h2>Please enter the new benefit:</h2>
-         <input type="text" placeholder="0" name="i3">
-     <h2>Add the attribute to of the condition be updated upon</h2>
-         <select name = "i4">
-              <option attribute = "benefit">Benefit</option>
-         </select>
-     <h2>Add the old benefit to replace:</h2>
-        <input type="text" placeholder="0" name="i5">
+     <h2>Update Benefits: </h2>
+     <h2>Set Benefit as:</h2>
+         <input type="text" name="new">
+     <h2>Replacing:</h2>
+        <input type="text" name="old">
      <button type="submit">Finalize selection</button>
  </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
 </div>
 </body>
 </html>
