fixing url for updateBenefits

--- a/templates/updateBenefits.html
+++ b/templates/updateBenefits.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('update') }}" method="post">
+ <form action = "{{ url_for('updateBenefits') }}" method="post">
      <h2>Update Benefits: </h2>
      <h2>Set Benefit as:</h2>
          <input type="text" name="new">
