--- a/templates/updateDepartments.html
+++ b/templates/updateDepartments.html
@@ -8,25 +8,17 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('update') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "Departments">Departments</option>
-         </select>
-     <h2>Add the attribute to be updated upon</h2>
-         <select name = "i2">
-             <option attribute = "department">Department</option>
-         </select>
-     <h2>Please enter the new department:</h2>
-         <input type="text" placeholder="0" name="i3">
-     <h2>Add the attribute to of the condition be updated upon</h2>
-         <select name = "i4">
-              <option attribute = "department">Department</option>
-         </select>
-     <h2>Add the old department to replace:</h2>
-        <input type="text" placeholder="0" name="i5">
+ <form action = "{{ url_for('updateDep') }}" method="post">
+     <h2>Update Department: </h2>
+     <h2>Set Department as:</h2>
+         <input type="text" name="new">
+     <h2>Replacing:</h2>
+        <input type="text" name="old">
      <button type="submit">Finalize selection</button>
  </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
 </div>
 </body>
 </html>
