Fixing wording for updateAddresses

--- a/templates/updateAddresses.html
+++ b/templates/updateAddresses.html
@@ -17,7 +17,7 @@
          </select>
      <h2>As:</h2>
          <input type="text" name="input">
-     <h2>For</h2>
+     <h2>Replacing</h2>
          <select name = "position">
           <option value = "address">Address</option>
           <option value = "zipCode">Zip code</option>
