--- a/templates/updateEmployeeAssignments.html
+++ b/templates/updateEmployeeAssignments.html
@@ -8,29 +8,26 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('update') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "EmployeeAssignments">Employee Assignments</option>
-         </select>
-     <h2>Add the attribute to be updated upon</h2>
+ <form action = "{{ url_for('updateEmpDep') }}" method="post">
+     <h2>Update Employee Assignment:</h2>
+     <h2>Set</h2>
          <select name = "i2">
           <option attribute = "EmployeeID">Employee ID</option>
           <option attribute = "Department">Department</option>
           <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
           <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
-     <h2>Please enter the new value:</h2>
-         <input type="text" placeholder="0" name="i3">
-     <h2>Add the attribute to of the condition be updated upon</h2>
+     <h2>As:</h2>
+         <input type="text" name="new">
+     <h2>Replacing</h2>
          <select name = "i4">
           <option attribute = "EmployeeID">Employee ID</option>
           <option attribute = "Department">Department</option>
           <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
           <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
-     <h2>Add the condition's value:</h2>
-        <input type="text" placeholder="0" name="i5">
+     <h2>Equaling:</h2>
+        <input type="text" name="old">
      <button type="submit">Finalize selection</button>
  </form>
 </div>
