added home button to updateEmpDep

--- a/templates/updateEmployeeAssignments.html
+++ b/templates/updateEmployeeAssignments.html
@@ -31,6 +31,9 @@
      <button type="submit">Finalize selection</button>
  </form>
 </div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
+</div>
 </body>
 </html>
 
