--- a/templates/updateEmployeeAssignments.html
+++ b/templates/updateEmployeeAssignments.html
@@ -12,19 +12,19 @@
      <h2>Update Employee Assignment:</h2>
      <h2>Set</h2>
          <select name = "i2">
-          <option attribute = "EmployeeID">Employee ID</option>
-          <option attribute = "Department">Department</option>
-          <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
-          <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
+          <option value = "EmployeeID">Employee ID</option>
+          <option value = "Department">Department</option>
+          <option value = "StartDate">Start Date (yyyy-mm-dd)</option>
+          <option value = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>As:</h2>
          <input type="text" name="new">
      <h2>Replacing</h2>
          <select name = "i4">
-          <option attribute = "EmployeeID">Employee ID</option>
-          <option attribute = "Department">Department</option>
-          <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
-          <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
+          <option value = "EmployeeID">Employee ID</option>
+          <option value = "Department">Department</option>
+          <option value = "StartDate">Start Date (yyyy-mm-dd)</option>
+          <option value = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Equaling:</h2>
         <input type="text" name="old">
