--- a/templates/updateEmployeeInfo.html
+++ b/templates/updateEmployeeInfo.html
@@ -9,50 +9,50 @@
 <body>
   <div>
  <form action = "{{ url_for('update') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "EmployeeInfo">Employee Information</option>
-         </select>
-     <h2>Add the attribute to be updated upon</h2>
+     <h2>Update Employee Info: </h2>
+     <h2>Set</h2>
          <select name = "i2">
-          <option attribute = "EmployeeID">Employee ID</option>
-          <option attribute = "SSN">SSN</option>
-          <option attribute = "Name">Name</option>
-          <option attribute = "Gender">Gender</option>
-          <option attribute = "DoB">Birthdate (yyyy-mm-dd)</option>
-          <option attribute = "PrimaryAddress">Primary Address</option>
-          <option attribute = "PhoneNumber">Phone Number</option>
-          <option attribute = "HighestDegree">Highest Degree</option>
-          <option attribute = "YearsExperience">Years Experience</option>
-          <option attribute = "HiringPosition">Hiring Position</option>
-          <option attribute = "HiringSalary">Hiring Salary</option>
-          <option attribute = "CurrentPosition">Current Position</option>
-          <option attribute = "CurrentSalary">Current Salary</option>
-          <option attribute = "Coverage">Health Insurance Coverage</option>
+          <option value = "EmployeeID">Employee ID</option>
+          <option value = "SSN">SSN</option>
+          <option value = "Name">Name</option>
+          <option value = "Gender">Gender</option>
+          <option value = "DoB">Birthdate (yyyy-mm-dd)</option>
+          <option value = "PrimaryAddress">Primary Address</option>
+          <option value = "PhoneNumber">Phone Number</option>
+          <option value = "HighestDegree">Highest Degree</option>
+          <option value = "YearsExperience">Years Experience</option>
+          <option value = "HiringPosition">Hiring Position</option>
+          <option value = "HiringSalary">Hiring Salary</option>
+          <option value = "CurrentPosition">Current Position</option>
+          <option value = "CurrentSalary">Current Salary</option>
+          <option value = "Coverage">Health Insurance Coverage</option>
          </select>
-     <h2>Please enter the new value:</h2>
-         <input type="text" placeholder="0" name="i3">
-     <h2>Add the attribute to of the condition be updated upon</h2>
+     <h2>As:</h2>
+         <input type="text" name="new">
+     <h2>Replacing</h2>
          <select name = "i4">
-          <option attribute = "EmployeeID">Employee ID</option>
-          <option attribute = "SSN">SSN</option>
-          <option attribute = "Name">Name</option>
-          <option attribute = "Gender">Gender</option>
-          <option attribute = "DoB">Birthdate (yyyy-mm-dd)</option>
-          <option attribute = "PrimaryAddress">Primary Address</option>
-          <option attribute = "PhoneNumber">Phone Number</option>
-          <option attribute = "HighestDegree">Highest Degree</option>
-          <option attribute = "YearsExperience">Years Experience</option>
-          <option attribute = "HiringPosition">Hiring Position</option>
-          <option attribute = "HiringSalary">Hiring Salary</option>
-          <option attribute = "CurrentPosition">Current Position</option>
-          <option attribute = "CurrentSalary">Current Salary</option>
-          <option attribute = "Coverage">Health Insurance Coverage</option>
+          <option value = "EmployeeID">Employee ID</option>
+          <option value = "SSN">SSN</option>
+          <option value = "Name">Name</option>
+          <option value = "Gender">Gender</option>
+          <option value = "DoB">Birthdate (yyyy-mm-dd)</option>
+          <option value = "PrimaryAddress">Primary Address</option>
+          <option value = "PhoneNumber">Phone Number</option>
+          <option value = "HighestDegree">Highest Degree</option>
+          <option value = "YearsExperience">Years Experience</option>
+          <option value = "HiringPosition">Hiring Position</option>
+          <option value = "HiringSalary">Hiring Salary</option>
+          <option value = "CurrentPosition">Current Position</option>
+          <option value = "CurrentSalary">Current Salary</option>
+          <option value = "Coverage">Health Insurance Coverage</option>
          </select>
-     <h2>Add the condition's value:</h2>
-        <input type="text" placeholder="0" name="i5">
+     <h2>Equaling:</h2>
+        <input type="text" name="old">
      <button type="submit">Finalize selection</button>
  </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
 </div>
 </body>
 </html>
