--- a/templates/updateEmployeeProjects.html
+++ b/templates/updateEmployeeProjects.html
@@ -8,11 +8,8 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('update') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "EmployeeProjects">Employee Projects</option>
-         </select>
+ <form action = "{{ url_for('updateEmpProj') }}" method="post">
+     
      <h2>Add the attribute to be updated upon</h2>
          <select name = "i2">
               <option attribute = "EmployeeID">Employee ID</option>
@@ -22,7 +19,7 @@
               <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Please enter the new value:</h2>
-         <input type="text" placeholder="0" name="i3">
+         <input type="text" placeholder="0" name="new">
      <h2>Add the attribute to of the condition be updated upon</h2>
          <select name = "i4">
               <option attribute = "EmployeeID">Employee ID</option>
@@ -32,7 +29,7 @@
               <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Add the condition's value:</h2>
-        <input type="text" placeholder="0" name="i5">
+        <input type="text" placeholder="0" name="old">
      <button type="submit">Finalize selection</button>
  </form>
 </div>
