--- a/templates/updatePositions.html
+++ b/templates/updatePositions.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('updateEmpProj') }}" method="post">
+ <form action = "{{ url_for('updatePositions') }}" method="post">
      
      <h2>Add the attribute to be updated upon</h2>
          <select name = "i2">
