--- a/templates/updateProjects.html
+++ b/templates/updateProjects.html
@@ -8,11 +8,8 @@
 </head>
 <body>
 <div>
-<form action = "{{ url_for('update') }}" method="post">
+<form action = "{{ url_for('updateProjects') }}" method="post">
     <h2>"Select" the table (it's for the code): </h2>
-    <select name = "i1">
-         <option attribute = "Projects">Projects</option>
-    </select>
     <h2>Add the attribute to be updated</h2>
     <select name = "i2">
       <option attribute = "Project">Project</option>
@@ -21,7 +18,7 @@
       <option attribute = "Status">Project Status</option>
     </select>
     <h2>Please enter the new value:</h2>
-        <input type="text" placeholder="0" name = "i3">  
+        <input type="text" placeholder="0" name = "new">  
     <h2>Add the condition's attribute</h2>
     <select name = "i4">
       <option attribute = "Project">Project</option>
@@ -30,7 +27,7 @@
       <option attribute = "Status">Project Status</option>
     </select>
     <h2>Add the condition's value:</h2>
-        <input type="text" placeholder="0" name = "i5">
+        <input type="text" placeholder="0" name = "old">
     <button type="submit">Finalize selection</button>
   </form>
   </div>
