--- a/templates/updateProjectStatus.html
+++ b/templates/updateProjectStatus.html
@@ -8,23 +8,15 @@
 </head>
 <body>
 <div>
-<form action = "{{ url_for('update') }}" method="post">
+<form action = "{{ url_for('updateProjStat') }}" method="post">
  <h2>"Select" the table (it's for the code): </h2>
- <select name = "i1">
-     <option attribute = "ProjectStatus">Project Status</option>
- </select>
- <h2>Add the attribute to be updated upon</h2>
- <select name = "i2">
-      <option attribute = "status">Status</option>
- </select>
+ 
  <h2>Please enter the new status:</h2>
-        <input type="text" placeholder="0" name = "i3">
+        <input type="text" placeholder="0" name = "new">
  <h2>Add the attribute of the condtion to be updated upon</h2>
-  <select name = "i4">
-      <option attribute = "status">Status</option>
-  </select>
+ 
   <h2>Add the old status to replace:</h2>
-      <input type="text" placeholder="0" name = "i5">
+      <input type="text" placeholder="0" name = "old">
   <button type="submit">Finalize selection</button>
   </div>
 </form>
