fixing updateEmp and updatePos

--- a/templates/updateEmployeeInfo.html
+++ b/templates/updateEmployeeInfo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('updateEmpInfo') }}" method="post">
+ <form action = "{{ url_for('updateEmp') }}" method="post">
      <h2>Update Employee Info: </h2>
      <h2>Set</h2>
          <select name = "i2">
