--- a/templates/updatePositions.html
+++ b/templates/updatePositions.html
@@ -8,26 +8,29 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('updatePositions') }}" method="post">
-     
-     <h2>Add the attribute to be updated upon</h2>
+ <form action = "{{ url_for('updatePos') }}" method="post">
+     <h2>Update Positions:</h2>
+     <h2>Set</h2>
          <select name = "i2">
             <option attribute = "Position">position</option>
             <option attribute = "minSalary">mininimum salary</option>
             <option attribute = "maxSalary">maximum salary</option>
          </select>
-     <h2>Please enter the new value:</h2>
-         <input type="text" placeholder="0" name="new">
-     <h2>Add the attribute to of the condition be updated upon</h2>
+     <h2>As:</h2>
+         <input type="text" name="new">
+     <h2>Replacing</h2>
          <select name = "i4">
             <option attribute = "Position">position</option>
             <option attribute = "minSalary">mininimum salary</option>
             <option attribute = "maxSalary">maximum salary</option>
          </select>
-     <h2>Add the condition's value:</h2>
-        <input type="text" placeholder="0" name="old">
+     <h2>Equaling:</h2>
+        <input type="text" name="old">
      <button type="submit">Finalize selection</button>
  </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
 </div>
 </body>
 </html>
