--- a/templates/updateHealthInsurance.html
+++ b/templates/updateHealthInsurance.html
@@ -16,7 +16,7 @@
          </select>
      <h2>As:</h2>
          <input type="text" name="i3">
-     <h2>For</h2>
+     <h2>Replacing</h2>
          <select name = "i4">
               <option value = "coverage">Coverage</option>
          </select>
