--- a/templates/updateProjectStatus.html
+++ b/templates/updateProjectStatus.html
@@ -9,16 +9,17 @@
 <body>
 <div>
 <form action = "{{ url_for('updateProjStat') }}" method="post">
- <h2>"Select" the table (it's for the code): </h2>
+ <h2>Update Project Status: </h2>
  
- <h2>Please enter the new status:</h2>
-        <input type="text" placeholder="0" name = "new">
- <h2>Add the attribute of the condtion to be updated upon</h2>
- 
-  <h2>Add the old status to replace:</h2>
-      <input type="text" placeholder="0" name = "old">
+ <h2>Set Status as:</h2>
+        <input type="text" name = "new">
+  <h2>Replacing:</h2>
+      <input type="text" name = "old">
   <button type="submit">Finalize selection</button>
-  </div>
 </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
+</div>
 </body>
 </html>
