Word edit in updateEmpDep

--- a/templates/updateEmployeeAssignments.html
+++ b/templates/updateEmployeeAssignments.html
@@ -19,7 +19,7 @@
          </select>
      <h2>As:</h2>
          <input type="text" name="new">
-     <h2>Replacing</h2>
+     <h2>For</h2>
          <select name = "i4">
           <option value = "EmployeeID">Employee ID</option>
           <option value = "Department">Department</option>
