--- a/templates/deleteHealthInsurance.html
+++ b/templates/deleteHealthInsurance.html
@@ -8,20 +8,16 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('delete') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "HealthInsurance">Health Insurance</option>
-         </select>
-     <h2>Add the attribute to be deleted upon</h2>
-         <select name = "i2">
-             <option attribute = "coverage">Coverage</option>
-         </select>
-     <h2>Please enter the coverage to be deleted:</h2>
-         <input type="text" placeholder="0" name="i3">
+ <form action = "{{ url_for('deleteHealth') }}" method="post">
+     <h2>Delete Health Insurance: </h2>
+     <h2>Named:</h2>
+         <input type="text" name="input">
      
      <button type="submit">Finalize selection</button>
  </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
 </div>
 </body>
 </html>
