--- a/templates/deleteHealthInsurance.html
+++ b/templates/deleteHealthInsurance.html
@@ -9,8 +9,7 @@
 <body>
   <div>
  <form action = "{{ url_for('deleteHealth') }}" method="post">
-     <h2>Delete Health Insurance: </h2>
-     <h2>Named:</h2>
+     <h2>Delete Health Insurance Named: </h2>
          <input type="text" name="input">
      
      <button type="submit">Finalize selection</button>
