Finished up to deleteStatus

--- a/templates/deleteDepartments.html
+++ b/templates/deleteDepartments.html
@@ -8,20 +8,15 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('delete') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "Departments">Departments</option>
-         </select>
-     <h2>Add the attribute to be deleted upon</h2>
-         <select name = "i2">
-             <option attribute = "department">Department</option>
-         </select>
+ <form action = "{{ url_for('deleteDep') }}" method="post">
      <h2>Please enter the department to be deleted:</h2>
-         <input type="text" placeholder="0" name="i3">
+         <input type="text" name="input">
      
      <button type="submit">Finalize selection</button>
  </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
 </div>
 </body>
 </html>
