--- a/templates/deleteProjectStatus.html
+++ b/templates/deleteProjectStatus.html
@@ -10,7 +10,7 @@
 <div>
 <form action = "{{ url_for('deleteStatus') }}" method="post">
  <h2>Please enter the status to be deleted:</h2>
-        <input type="text" name = "i3">
+        <input type="text" name = "input">
 
   <button type="submit">Finalize selection</button>
 </form>
