--- a/templates/deleteRoles.html
+++ b/templates/deleteRoles.html
@@ -8,19 +8,14 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('delete') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "Roles">Roles</option>
-         </select>
-     <h2>Add the attribute to be deleted upon</h2>
-         <select name = "i2">
-             <option attribute = "role">Role</option>
-         </select>
+ <form action = "{{ url_for('deleteRole') }}" method="post">
      <h2>Please enter the role to be deleted upon:</h2>
-         <input type="text" placeholder="0" name="i3">
+         <input type="text" name="input">
      <button type="submit">Finalize selection</button>
  </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
 </div>
 </body>
 </html>
