--- a/templates/deleteEmployeeBenefits.html
+++ b/templates/deleteEmployeeBenefits.html
@@ -8,20 +8,16 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('delete') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "EmployeeBenefits">Employee Benefits</option>
-         </select>
+ <form action = "{{ url_for('deleteEmpBen') }}" method="post">
      <h2>Add the attribute to be deleted upon</h2>
-         <select name = "i2">
+         <select name = "att">
               <option attribute = "EmployeeID">Employee ID</option>
               <option attribute = "Benefit">Benefit</option>
               <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
               <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Please enter the value to be deleted:</h2>
-         <input type="text" placeholder="0" name="i3">
+         <input type="text" placeholder="0" name="old">
      
      <button type="submit">Finalize selection</button>
  </form>
