--- a/templates/deletePositions.html
+++ b/templates/deletePositions.html
@@ -8,22 +8,22 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('delete') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "Positions">Positions</option>
-         </select>
-     <h2>Add the attribute to be deleted upon</h2>
-         <select name = "i2">
+ <form action = "{{ url_for('deletePos') }}" method="post">
+     <h2>Delete Position: </h2>
+     <h2>With</h2>
+         <select name = "att">
             <option attribute = "Position">position</option>
             <option attribute = "minSalary">mininimum salary</option>
             <option attribute = "maxSalary">maximum salary</option>
          </select>
-     <h2>Please enter the value to be deleted upon:</h2>
-         <input type="text" placeholder="0" name="i3">
+     <h2>Equaling:</h2>
+         <input type="text" name="input">
      
      <button type="submit">Finalize selection</button>
  </form>
+</div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
 </div>
 </body>
 </html>
