--- a/templates/deleteEmployeeInfo.html
+++ b/templates/deleteEmployeeInfo.html
@@ -8,13 +8,9 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('delete') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "EmployeeInfo">Employee Information</option>
-         </select>
+ <form action = "{{ url_for('deleteEmpInfo') }}" method="post">
      <h2>Add the attribute to be deleted upon</h2>
-         <select name = "i2">
+         <select name = "att">
           <option attribute = "EmployeeID">Employee ID</option>
           <option attribute = "SSN">SSN</option>
           <option attribute = "Name">Name</option>
@@ -31,7 +27,7 @@
           <option attribute = "Coverage">Health Insurance Coverage</option>
          </select>
      <h2>Please enter the value to be deleted:</h2>
-         <input type="text" placeholder="0" name="i3">
+         <input type="text" placeholder="0" name="old">
      
      <button type="submit">Finalize selection</button>
  </form>
