--- a/templates/deleteEmployeeProjects.html
+++ b/templates/deleteEmployeeProjects.html
@@ -8,13 +8,9 @@
 </head>
 <body>
   <div>
- <form action = "{{ url_for('delete') }}" method="post">
-     <h2>"Select" the table (it's for the code): </h2>
-         <select name = "i1">
-             <option attribute = "EmployeeProjects">Employee Projects</option>
-         </select>
+ <form action = "{{ url_for('deleteEmpProj') }}" method="post">
      <h2>Add the attribute to be deleted upon</h2>
-         <select name = "i2">
+         <select name = "att">
               <option attribute = "EmployeeID">Employee ID</option>
               <option attribute = "Project">Project</option>
               <option attribute = "Role">Role</option>
@@ -22,7 +18,7 @@
               <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Please enter the value to be deleted:</h2>
-         <input type="text" placeholder="0" name="i3">
+         <input type="text" placeholder="0" name="old">
      
      <button type="submit">Finalize selection</button>
  </form>
