--- a/templates/deleteProjects.html
+++ b/templates/deleteProjects.html
@@ -8,20 +8,16 @@
 </head>
 <body>
 <div>
-<form action = "{{ url_for('delete') }}" method="post">
-    <h2>"Select" the table (it's for the code): </h2>
-    <select name = "i1">
-         <option attribute = "Projects">Projects</option>
-    </select>
+<form action = "{{ url_for('deleteProj') }}" method="post">
     <h2>Add the attribute to be deleted upon</h2>
-    <select name = "i2">
+    <select name = "att">
       <option attribute = "Project">Project</option>
       <option attribute = "Department">Department</option>
       <option attribute = "ProjectLeader">Project Leader</option>
       <option attribute = "Status">Project Status</option>
     </select>
     <h2>Please enter the value to be deleted upon:</h2>
-        <input type="text" placeholder="0" name = "i3">  
+        <input type="text" placeholder="0" name = "old">  
     
     <button type="submit">Finalize selection</button>
   </form>
