Adding home buttons

--- a/templates/deleteProjects.html
+++ b/templates/deleteProjects.html
@@ -22,5 +22,8 @@
     <button type="submit">Finalize selection</button>
   </form>
   </div>
+  <div>
+    <a href="{{url_for("home")}}">Home</a href>
+</div>
 </body>
 </html>
