--- a/templates/deleteEmployeeInfo.html
+++ b/templates/deleteEmployeeInfo.html
@@ -32,5 +32,8 @@
      <button type="submit">Finalize selection</button>
  </form>
 </div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
+</div>
 </body>
 </html>
