--- a/templates/deleteEmployeeProjects.html
+++ b/templates/deleteEmployeeProjects.html
@@ -23,5 +23,8 @@
      <button type="submit">Finalize selection</button>
  </form>
 </div>
+<div>
+    <a href="{{url_for("home")}}">Home</a href>
+</div>
 </body>
 </html>
