--- a/templates/deleteAddresses.html
+++ b/templates/deleteAddresses.html
@@ -9,13 +9,13 @@
 <body>
   <div>
  <form action = "{{ url_for('deleteAddress') }}" method="post">
-     <h2>Add the attribute to be deleted upon</h2>
+     <h2>Delete address with</h2>
          <select name = "att">
           <option attribute = "address">Address</option>
           <option attribute = "zipCode">Zip code</option>
          </select>
-     <h2>Please enter the value to be deleted:</h2>
-         <input type="text" placeholder="0" name="old">
+     <h2>Equaling:</h2>
+         <input type="text" name="old">
      
      <button type="submit">Finalize selection</button>
  </form>
