--- a/templates/deleteEmployeeAssignments.html
+++ b/templates/deleteEmployeeAssignments.html
@@ -9,15 +9,15 @@
 <body>
   <div>
  <form action = "{{ url_for('deleteEmpDep') }}" method="post">
-     <h2>Add the attribute to be deleted upon</h2>
+     <h2>Delete Employee Assignment with</h2>
          <select name = "att">
           <option attribute = "EmployeeID">Employee ID</option>
           <option attribute = "Department">Department</option>
           <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
           <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
-     <h2>Please enter the value to be deleted:</h2>
-         <input type="text" placeholder="0" name="old">
+     <h2>Equaling:</h2>
+         <input type="text" name="old">
      
      <button type="submit">Finalize selection</button>
  </form>
