--- a/templates/deleteEmployeeInfo.html
+++ b/templates/deleteEmployeeInfo.html
@@ -9,7 +9,7 @@
 <body>
   <div>
  <form action = "{{ url_for('deleteEmpInfo') }}" method="post">
-     <h2>Add the attribute to be deleted upon</h2>
+     <h2>Delete Employee with</h2>
          <select name = "att">
           <option attribute = "EmployeeID">Employee ID</option>
           <option attribute = "SSN">SSN</option>
@@ -26,8 +26,8 @@
           <option attribute = "CurrentSalary">Current Salary</option>
           <option attribute = "Coverage">Health Insurance Coverage</option>
          </select>
-     <h2>Please enter the value to be deleted:</h2>
-         <input type="text" placeholder="0" name="old">
+     <h2>Equaling:</h2>
+         <input type="text" name="old">
      
      <button type="submit">Finalize selection</button>
  </form>
