--- a/templates/deleteProjects.html
+++ b/templates/deleteProjects.html
@@ -9,14 +9,14 @@
 <body>
 <div>
 <form action = "{{ url_for('deleteProj') }}" method="post">
-    <h2>Add the attribute to be deleted upon</h2>
+    <h2>Delete Project with</h2>
     <select name = "att">
       <option attribute = "Project">Project</option>
       <option attribute = "Department">Department</option>
       <option attribute = "ProjectLeader">Project Leader</option>
       <option attribute = "Status">Project Status</option>
     </select>
-    <h2>Please enter the value to be deleted upon:</h2>
+    <h2>Equaling:</h2>
         <input type="text" placeholder="0" name = "old">  
     
     <button type="submit">Finalize selection</button>
