--- a/templates/query.html
+++ b/templates/query.html
@@ -23,6 +23,9 @@
     </select>
     <input type = "submit" value = "Show"> <!--The problem is actually making this form submit things...-->
   </form>
+  <form action = "{{url_for("sql")}}" method = "POST">
+    <input type = "text" name = "input">
+  </form>
   {%if query%}
   <br></br>
   <table border="1px">
