--- a/templates/query.html
+++ b/templates/query.html
@@ -23,9 +23,12 @@
     </select>
     <input type = "submit" value = "Show"> <!--The problem is actually making this form submit things...-->
   </form>
+  <div>
+    <h2>SQL input: </h2>
   <form action = "{{url_for("sql")}}" method = "POST">
     <input type = "text" name = "input">
   </form>
+</div>
   {%if query%}
   <br></br>
   <table border="1px">
