added enter button for sql input

--- a/templates/query.html
+++ b/templates/query.html
@@ -27,6 +27,7 @@
     <h2>SQL input: </h2>
   <form action = "{{url_for("sql")}}" method = "POST">
     <input type = "text" name = "input">
+    <input type = "submit" value = "Enter">
   </form>
 </div>
   {%if query%}
