--- a/templates/query.html
+++ b/templates/query.html
@@ -24,6 +24,15 @@
     <input type = "submit" value = "Show"> <!--The problem is actually making this form submit things...-->
   </form>
   <div>
+    <h2>Find: </h2>
+    <form action = "{{url_for("genQuery")}}">
+      <select name = "attribute">
+        <option value = "EmployeeInfo">Employee</option>
+      </select>
+      <input type = "submit" value = "Enter">
+    </form>
+  </div>
+  <div>
     <h2>SQL input: </h2>
   <form action = "{{url_for("sql")}}" method = "POST">
     <input type = "text" name = "input">
