Fixing all query htmls

--- a/templates/query16.html
+++ b/templates/query16.html
@@ -1,12 +1,10 @@
-{%extends "template.html"%}
-{%block title%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finding min & max salary for a given position</title>
+    <title>Finding min and max salary for a given position</title>
 </head>
 <div>
 <h2>Add: </h2>
@@ -18,7 +16,3 @@
 </div>
 </body>
 </html>
-{%endblock%}
-{%block content%}
-
-{%endblock%}
