--- a/templates/query.html
+++ b/templates/query.html
@@ -24,6 +24,31 @@
     <input type = "submit" value = "Show"> <!--The problem is actually making this form submit things...-->
   </form>
   <div>
+    <form action = "{{url_for("queryMenu")}}" method = "POST">
+      <option value = "1">View an employee's data</option>
+      <option value = "2">Find employees of a given department</option>
+      <option value = "3">Find employees of a given project</option>
+      <option value = "4">Find most common zip code</option>
+      <option value = "5">View project info</option>
+      <option value = "6">Find number of employees on a given project at a given time</option>
+      <option value = "7">Find employees with a certain benefit</option>
+      <option value = "8">Find employee with a given role in a given project</option>
+      <option value = "9">View active projects</option>
+      <option value = "10">View department info</option>
+      <option value = "11"></option>
+      <option value = "12"></option>
+      <option value = "13"></option>
+      <option value = "14"></option>
+      <option value = "15"></option>
+      <option value = "16"></option>
+      <option value = "17"></option>
+      <option value = "18"></option>
+      <option value = "19"></option>
+      <option value = "20"></option>
+      <option value = "21"></option>
+    </form>
+  </div>
+  <div>
     <h2>Find: </h2>
     <form action = "{{url_for("genQuery")}}">
       <select name = "attribute">
