--- a/templates/query.html
+++ b/templates/query.html
@@ -35,17 +35,17 @@
       <option value = "8">Find employee with a given role in a given project</option>
       <option value = "9">View active projects</option>
       <option value = "10">View department info</option>
-      <option value = "11"></option>
-      <option value = "12"></option>
-      <option value = "13"></option>
-      <option value = "14"></option>
-      <option value = "15"></option>
-      <option value = "16"></option>
-      <option value = "17"></option>
-      <option value = "18"></option>
-      <option value = "19"></option>
-      <option value = "20"></option>
-      <option value = "21"></option>
+      <option value = "11">Find employee's current role</option>
+      <option value = "12">Find roles of a given employee with dates</option>
+      <option value = "13">Finding how many employees have a given health plan</option>
+      <option value = "14">Finding how many employees have each type of health plan</option>
+      <option value = "15">Comparing salaries of underpaid female employees to find improvement</option>
+      <option value = "16">Finding min and max salary for position</option>
+      <option value = "17">Finding number of projects per status</option>
+      <option value = "18">Finding start and end date for employee and department</option>
+      <option value = "19">Finding project leaders' names with projects</option>
+      <option value = "20">See whose salaries have gone up by 20%+ since hiring</option>
+      <option value = "21">Find position with highest average salary</option>
     </form>
   </div>
   <div>
