--- a/templates/query.html
+++ b/templates/query.html
@@ -34,18 +34,18 @@
       <option value = "7">Find employees with a certain benefit</option>
       <option value = "8">Find employee with a given role in a given project</option>
       <option value = "9">View active projects</option>
-      <option value = "10">View department info</option>
-      <option value = "11"></option>
-      <option value = "12"></option>
-      <option value = "13"></option>
-      <option value = "14"></option>
-      <option value = "15"></option>
-      <option value = "16"></option>
-      <option value = "17"></option>
-      <option value = "18"></option>
-      <option value = "19"></option>
-      <option value = "20"></option>
-      <option value = "21"></option>
+      <option value = "10">View department info</option> <!--Fix this func-->
+      <option value = "11">Find current role of a given employee</option>
+      <option value = "12">Find all roles of an employee (and their dates)</option>
+      <option value = "13">Find number of employees with a given health plan</option>
+      <option value = "14">Find number of employees with each health plan</option>
+      <option value = "15">Check if salary of underpaid female workers has improved</option>
+      <option value = "16">Find min and max salary of a given position</option>
+      <option value = "17">Find number of projects for each project status</option>
+      <option value = "18">Find start and end date for a given employee for any of their departments</option>
+      <option value = "19">View all project leaders and their projects</option>
+      <option value = "20">Find employees with salary increases over 20% since starting</option>
+      <option value = "21">Find position with highest salary</option>
     </form>
   </div>
   <div>
