--- a/templates/query.html
+++ b/templates/query.html
@@ -24,6 +24,7 @@
     <input type = "submit" value = "Show"> <!--The problem is actually making this form submit things...-->
   </form>
   <div>
+    <h2>Questions</h2>
     <form action = "{{url_for("queryMenu")}}" method = "POST">
       <select name = "q">
         <option value = "1">View an employee's data</option>
@@ -48,6 +49,7 @@
         <option value = "20">Find employees with salary increases over 20% since starting</option>
         <option value = "21">Find position with highest salary</option>
       </select>
+      <input type = "submit" value = "enter">
     </form>
   </div>
   <div>
