--- a/templates/query.html
+++ b/templates/query.html
@@ -49,7 +49,7 @@
         <option value = "20">Find employees with salary increases over 20% since starting</option>
         <option value = "21">Find position with highest salary</option>
       </select>
-      <input type = "submit" value = "enter">
+      <input type = "submit" value = "Enter">
     </form>
   </div>
   <div>
