--- a/templates/query.html
+++ b/templates/query.html
@@ -56,7 +56,14 @@
     <h2>Find: </h2>
     <form action = "{{url_for("genQuery")}}">
       <select name = "attribute">
-        <option value = "EmployeeInfo">Employee</option>
+        <option value = "emp">Employee</option>
+        <option value = "dep">Department</option>
+        <option value = "proj">Project</option>
+        <option value = "position">Position</option>
+        <option value = "ben">Benefit</option>
+      </select>
+      <select name = "cond">
+        <option value = ""></option>
       </select>
       <input type = "submit" value = "Enter">
     </form>
