menus in query.html for gen query

--- a/templates/query.html
+++ b/templates/query.html
@@ -62,9 +62,25 @@
         <option value = "position">Position</option>
         <option value = "ben">Benefit</option>
       </select>
+      with
       <select name = "cond">
-        <option value = ""></option>
+        <option value = "name">Name</option>
+        <option value = "gender">Gender</option>
+        <option value = "DoB">Date of Birth</option>
+        <option value = "highestDegree">Degree</option>
+        <option value = "yearsExperience">Years of Experience</option>
+        <option value = "department">Department</option>
+        <option value = "position">Position</option>
+        <option value = "project">Project</option>
+        <option value = "benefit">Benefit</option>
       </select>
+      <select name = "operation">
+        <option value = "=">equals</option>
+        <option value = ">">greater than</option>
+        <option value = "<">less than</option>
+        <option value = "like">contains</option>
+      </select>
+      <input type = "text" name = "input">
       <input type = "submit" value = "Enter">
     </form>
   </div>
