more menu items

--- a/templates/query.html
+++ b/templates/query.html
@@ -73,6 +73,10 @@
         <option value = "position">Position</option>
         <option value = "project">Project</option>
         <option value = "benefit">Benefit</option>
+        <option value = "employee">Employee</option>
+        <option value = "status">Project Status</option>
+        <option value = "projectLeader">Project Leader</option>
+        <option value = "salary">Salary</option>
       </select>
       <select name = "operation">
         <option value = "=">equals</option>
