working on genQuery

--- a/templates/query.html
+++ b/templates/query.html
@@ -53,7 +53,7 @@
     </form>
   </div>
   <div>
-    <h2>Find: </h2>
+    <h2>View: </h2>
     <form action = "{{url_for("genQuery")}}">
       <select name = "attribute">
         <option value = "emp">Employee</option>
