--- a/templates/addBenefits.html
+++ b/templates/addBenefits.html
@@ -10,7 +10,7 @@
 <h2>Add: </h2>
 <form action="{{ url_for('insertIntoBenefits') }}" method="post">
    <p>Please enter the new type of benefit:</p>
-   <input type="text" name="i1"/> <br>
+   <input type="text" name="i1" size="40"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
 </div>
