--- a/templates/addEmployeeBenefits.html
+++ b/templates/addEmployeeBenefits.html
@@ -12,7 +12,7 @@
    <p>Please enter the new EmployeeID:</p>
    <input type="text" name="employee"/> <br>
    Please enter the new Benefit:<br>
-   <input type="text" name="benefit"/> <br>
+   <input type="text" name="benefit" size="40"/> <br>
    Please enter the new Start Date as yyyy-mm-dd:<br>
    <input type="text" name="start"/> <br>
    Please enter the new End Date as yyyy-mm-dd:<br>
