--- a/templates/deleteBenefits.html
+++ b/templates/deleteBenefits.html
@@ -10,7 +10,7 @@
   <div>
  <form action = "{{ url_for('deleteBen') }}" method="post">
      <h2>Delete Benefit named:</h2>
-         <input type="text" name="input">
+         <input type="text" name="input" size="40">
      
      <button type="submit">Finalize selection</button>
  </form>
