--- a/templates/deleteEmployeeBenefits.html
+++ b/templates/deleteEmployeeBenefits.html
@@ -17,7 +17,7 @@
               <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Equaling:</h2>
-         <input type="text" name="old">
+         <input type="text" name="old" size="40">
      
      <button type="submit">Finalize selection</button>
  </form>
