--- a/templates/updateEmployeeBenefits.html
+++ b/templates/updateEmployeeBenefits.html
@@ -18,7 +18,7 @@
               <option value = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>As:</h2>
-         <input type="text" name="new">
+         <input type="text" name="new" size="40">
      <h2>Replacing</h2>
          <select name = "i4">
               <option value = "EmployeeID">Employee ID</option>
@@ -27,7 +27,7 @@
               <option value = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Add the condition's value:</h2>
-        <input type="text" name="old">
+        <input type="text" name="old" size="40">
      <button type="submit">Finalize selection</button>
  </form>
 </div>
