--- a/templates/updateBenefits.html
+++ b/templates/updateBenefits.html
@@ -11,9 +11,9 @@
  <form action = "{{ url_for('updateBen') }}" method="post">
      <h2>Update Benefits: </h2>
      <h2>Set Benefit as:</h2>
-         <input type="text" name="new">
+         <input type="text" name="new" size="40">
      <h2>Replacing:</h2>
-        <input type="text" name="old">
+        <input type="text" name="old" size="40">
      <button type="submit">Finalize selection</button>
  </form>
 </div>
