fixing showall for EmployeeInfo

--- a/templates/query.html
+++ b/templates/query.html
@@ -14,7 +14,7 @@
       <option value = "Addresses">Address</option>
       <option value = "Positions">Job Position</option>
       <option value = "Departments">Department</option>
-      <option value = "Employees">Employee</option>
+      <option value = "EmployeeInfo">Employee</option>
       <option value = "EmployeeBenefits">Employee's Benefit</option>
       <option value = "Projects">Project</option>
       <option value = "Roles">Role</option>
