--- a/templates/updateProjectStatus.html
+++ b/templates/updateProjectStatus.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-<form action = "{{ url_for('updateProjStat') }}" method="post">
+<form action = "{{ url_for('updateStatus') }}" method="post">
  <h2>Update Project Status: </h2>
  
  <h2>Set Status as:</h2>
