--- a/templates/updateEmployeeProjects.html
+++ b/templates/updateEmployeeProjects.html
@@ -12,21 +12,21 @@
      <h2>Update Employee Projects</h2>
      <h2>Set</h2>
          <select name = "i2">
-              <option attribute = "EmployeeID">Employee ID</option>
-              <option attribute = "Project">Project</option>
-              <option attribute = "Role">Role</option>
-              <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
-              <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
+              <option value = "EmployeeID">Employee ID</option>
+              <option value = "Project">Project</option>
+              <option value = "Role">Role</option>
+              <option value = "StartDate">Start Date (yyyy-mm-dd)</option>
+              <option value = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>As:</h2>
          <input type="text" name="new">
      <h2>Replacing</h2>
          <select name = "i4">
-              <option attribute = "EmployeeID">Employee ID</option>
-              <option attribute = "Project">Project</option>
-              <option attribute = "Role">Role</option>
-              <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
-              <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
+              <option value = "EmployeeID">Employee ID</option>
+              <option value = "Project">Project</option>
+              <option value = "Role">Role</option>
+              <option value = "StartDate">Start Date (yyyy-mm-dd)</option>
+              <option value = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Equaling:</h2>
         <input type="text" name="old">
